# web3-ethereum-defi

./: .1delta.env.example  .env.derive.example  .gitignore  .gitmodules  .readthedocs.yml  .web3v6.txt  .web3v7.txt  CHANGELOG.md  CLAUDE.md  Dockerfile.analysis-vault  Dockerfile.vault-scanner  LICENSE.txt  Makefile  README-GMX-Lagoon.md  README.md  add_unit_test_param.py  block_timestamps.duckdb  docker-compose.yml  environment.yml  failure_rate_notes.md  foundry.toml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_v6.txt  requirements_v7.txt  rpc-test.sh  tox.ini  vault-shell.sh
.claude/: settings.json  settings.local.json
.claude/config/: gemini.json
.claude/docs/: agent-tricks-and-troubleshooting.md  curatorwatch.md  gspread.md  vault-notes.md
.claude/plans/: accountable-vault-deposit-manager.md  ember-vault-deposit-manager.md  vault-json-rpc-call-accounting.md
.claude/projects/: .gitignore
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-docs-improvement.yml  4-integration-request.yml  config.yml  issue-tempalte.md  issue-template.md
.github/workflows/: claude-code-review.yml  claude-review-pr.yml  claude.yml  debug.yml  dependency-audit.yml  dependency-review.yml  docs.yml  lint.yml  test-gmx.yml  test-integration-aave_v3.yml  test-integration-cctp.yml  test-integration-derive.yml  test-integration-enzyme.yml  test-integration-erc_4626.yml  test-integration-event_reader.yml  test-integration-feed.yml  test-integration-gains.yml  test-integration-grvt.yml  test-integration-guard.yml  test-integration-hibachi.yml  test-integration-hyperliquid.yml  test-integration-hypersync.yml  test-integration-ipor.yml  test-integration-lagoon.yml  test-integration-lifi.yml  test-integration-lighter.yml  test-integration-morpho.yml  test-integration-one_delta.yml  test-integration-orderly.yml  test-integration-provider.yml  test-integration-research.yml  test-integration-rpc.yml  test-integration-safe-integration.yml  test-integration-safe.yml  test-integration-token_analysis.yml  test-integration-uniswap_v2.yml  test-integration-uniswap_v3.yml  test-integration-usdc.yml  test-integration-vault.yml  test-integration-velora.yml  (+7 more)
contracts/: ERC20MockDecimals.sol
contracts/aave-v3/: README.md  package-lock.json  package.json
contracts/guard/: README.md  foundry.toml  remappings.txt
contracts/in-house/: .gitignore  (+5 more)
docs/: Makefile  README-Hypercore-guard.md  README-contract-size.md  README-hyperevm-goldsky-failure.md  README-hyperliquid-vault-limitations.md  README-hypersync-tests.md  README-test-suite-performance.md  claude-notes.md  requirements.txt
eth_defi/: __init__.py  abi.py  anvil.py  balances.py  basewallet.py  chain.py  cloudflare_r2.py  coloured_logging.py  compat.py  confirmation.py  deploy.py  disk_cache.py  eip_712.py  event.py  fallback_provider.py  ganache.py  gas.py  gcloud_hsm_wallet.py  hotwallet.py  hsm_hotwallet.py  logging_retry.py  mev_blocker.py  middleware.py  provider_wallet.py  retry.py  revert_reason.py  sqlite_cache.py  stablecoin_metadata.py  timestamp.py  token.py  token_tax.py  trace.py  trade.py  tx.py  txmonitor.py  types.py  utils.py  version_detector.py  version_info.py
eth_hentai/: abi.py  balances.py  deploy.py  event.py  ganache.py  gas.py  hotwallet.py  portfolio.py  retry.py  revert_reason.py  token.py  txmonitor.py  uniswap_v2.py  uniswap_v2_analysis.py  uniswap_v2_fees.py  uniswap_v2_utils.py  utils.py
misc/: enzyme-vaults-chain-1.csv  enzyme-vaults-chain-137.csv
notebooks/: uniswapv3-liquidity.ipynb  uniswapv3-price.ipynb
scripts/: backfill-tokenised-funds.py  bnb-chain-get-logs-test.py  build-container.sh  chainlink-token-price.py  check-rpc.py  clean-enzyme-abi.sh  download-long-token-list-for-bnb-chain.py  drpc-debug.sh  erc20-manual-transfer.py  example_swap_polygon.py  fetch-bnb-chain-pairs.py  fetch-enzyme-vault-info.py  gmx_position_test.py  live-price.py  make-swap-on-pancake.py  make-swap-on-uniswap-v3.py  multithread-reader.py  native-token-price.py  pancakeswap-current-price.py  pancakeswap-live-price.py  pancakeswap-live-swaps-minimal.py  read-uniswap-v2-pairs-and-swaps-concurrent.py  read-uniswap-v2-pairs-and-swaps-live.py  read-uniswap-v2-pairs-and-swaps-reorg.py  read-uniswap-v2-pairs-and-swaps.py  read-uniswap-v2-pairs.py  slippage-and-price-impact.py  smoke_console_logging.py  test-scan-aave-v2.py  test-trade-polygon-arbitrum.py  test_fee_calc.py  trader-joe-test.py  uniswap-v2-get-weth-usdc-price.py  uniswap-v2-pairs-and-swaps-concurrent.py  uniswap-v2-pairs-and-swaps.py  uniswap-v2-real-time-candles.py  uniswap-v2-swaps-live-minimal.py  uniswap-v2-swaps-live.py  uniswap-v3-live-price.py  uniswap-v3-price-impact.py  (+3 more)
smart_contracts_for_testing/: abi.py  deploy.py  event.py  gas.py  hotwallet.py  portfolio.py  sushiswap.py  token.py  txmonitor.py  uniswap_v2.py  uniswap_v2_analyse.py  uniswap_v2_analysis.py  uniswap_v2_fees.py  uniswap_v2_utils.py  uniswaputils.py  uniswapv2.py  utils.py
tests/: bnb-chain-token-list.json  conftest.py  manual_bnb_chain_build_transaction.py  manual_bnb_chain_check_revert_reason.py  manual_check_ganache_port_example.py  manual_fetch_erc20_example.py  manual_scan_aave_v2.py  manual_uniswapv3_data.py  test_aave_deposit.py  test_anvil.py  test_balances.py  test_balances_multicall.py  test_block_reader.py  test_chain.py  test_cloudflare_r2.py  test_confirmation.py  test_csv_block_header_storage.py  test_decode_tx.py  test_event_reader.py  test_fallback_provider.py  test_ganache.py  test_gas.py  test_gcloud_hsm_wallet.py  test_gmx_position_close_remnants.py  test_hsm_hotwallet.py  test_lazy_timestamp_reader.py  test_link.py  test_mantle_timestamp.py  test_measure_block_time.py  test_mev_blocker.py  test_middleware.py  test_parquet_block_header_storage.py  test_portfolio.py  test_price_conversion.py  test_price_oracle.py  test_reorganisation_monitor.py  test_reorganisation_monitor_ankr.py  test_reorganisation_monitor_graphql.py  test_reorganisation_monitor_polygon.py  test_revert_reason.py  (+17 more)
(+5802 files in other folders)
