[tool.poetry]
name = "web3-ethereum-defi"
version = "0.25.2"
description = "Python library for Uniswap, Aave, ChainLink, Enzyme and other protocols on BNB Chain, Polygon, Ethereum and other blockchains"
authors = ["Mikko Ohtamaa <mikko@tradingstrategy.ai>"]
license = "MIT"

homepage = "https://web3-ethereum-defi.readthedocs.io/"
repository = "https://github.com/tradingstrategy-ai/web3-ethereum-defi"
readme = "README.md"
keywords = ["ethereum", "cryptocurrency", "uniswap", "erc-20", "pancakeswap", "bnb smart chain", "polygon", "web3", "blockchain", "avalanche", "arbitrum", "chainlink"]
packages = [
    { include = "eth_defi" },
]

# See PyPi for supported links https://github.com/pypi/warehouse/blob/main/warehouse/templates/packaging/detail.html
# https://stackoverflow.com/a/74394591/315168
# https://pypi.org/project/links-demo/
[tool.poetry.urls]
Changelog = "https://github.com/tradingstrategy-ai/web3-ethereum-defi/blob/master/CHANGELOG.md"
Documentation = "https://web3-ethereum-defi.readthedocs.io/"
Twitter = "https://twitter.com/tradingprotocol"
Youtube = "https://www.youtube.com/@tradingstrategyprotocol"
Discord = "https://discord.gg/5M88m9nM8H"
Sponsor = "https://tradingstrategy.ai"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# https://github.com/apache/arrow/pull/35412
# Last checked 2023-07, still broken
urllib3 = "<2"

psutil = "^5.9.0"
ujson = ">=5.8.0"
cachetools = "^5.3.2"
futureproof = "^0.3.1"
setuptools = {version = "^69.0.2"}
eth-bloom = "^2.0.0"
evm-trace = "^0.1.0a17"
web3 = {version = "6.14.0", extras = ["tester"]}
tqdm-loggable = ">=0.1.3"
sigfig = "^1.3.2"
tqdm = {version = ">=4.66.1", optional = true}
pandas = {version = "<2.2", optional = true}
gql = {extras = ["requests"], version = "^3.3.0", optional = true}
jupyter = {version = "^1.0.0", optional = true}
matplotlib = {version = "^3.5.2", optional = true}
plotly = {version = "^5.8.2", optional = true}
pyarrow = {version = "*", optional = true}
pytest-xdist = {version = "^3.3.1", optional = true}

# Docs
Sphinx = {version = "^4.5.0", optional = true}
sphinx-sitemap = {version = "^2.2.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.16.0", optional = true}
nbsphinx = {version = "^0.8.9", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
zope-dottedname = {version = "^6.0", optional = true}
furo = {version = "^2022.6.4.1", optional = true}
sphinxcontrib-applehelp = {version = "1.0.4", optional = true} # Version pindowns https://github.com/sphinx-doc/sphinxcontrib-applehelp/blob/master/CHANGES
sphinxcontrib-devhelp = {version = "1.0.2", optional = true} # Version pindowns https://github.com/sphinx-doc/sphinxcontrib-devhelp/blob/master/CHANGES
sphinxcontrib-htmlhelp = {version = "2.0.1", optional = true} # Version pindowns https://github.com/sphinx-doc/sphinxcontrib-htmlhelp/blob/master/CHANGES
sphinxcontrib-serializinghtml = {version = "1.1.5", optional = true} # Version pindowns https://github.com/sphinx-doc/sphinxcontrib-serializinghtml/blob/master/CHANGES
sphinxcontrib-qthelp = {version = "1.0.3", optional = true} # Version pindowns https://github.com/sphinx-doc/sphinxcontrib-qthelp/blob/master/CHANGES


# Removed
# Only soft dependency in tests, but RTD complains
# terms-of-service = {path = "contracts/terms-of-service", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.7.0"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
flaky = "^3.7.0"

# See discussion https://github.com/python-poetry/poetry/issues/3348#issuecomment-726534462
[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-sitemap", "sphinx-autodoc-typehints", "furo", "nbsphinx", "zope.dottedname", "sphinx-sitemap", "sphinx-rtd-theme"]
data = ["jupyter", "tqdm", "pandas", "gql", "matplotlib", "plotly", "pyarrow"]
test = ["pytest-xdist"]

# Since new Poetry version
# TODO: CLean up dev dep gorups
[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coloredlogs = "^15.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--capture=no"

# Do not let pytest to crawl into contracts/ subprojects
# that contain tests and are independent from us
# https://stackoverflow.com/a/58306308/315168
norecursedirs="contracts/*"

filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*:",
    "ignore::DeprecationWarning:eth_tester.*:",
]

# We hate arbitrary line lengths
[tool.black]
line-length = 999

[tool.isort]
profile = "black"

# We hate arbitrary line lengths
[flake8]
max-line-length = 999
extend-ignore = "E203"

[tool.poetry.scripts]
install-aave-for-testing = 'eth_defi.aave_v3.deployer:install_aave_for_testing'
